# llm.brrrr

./: .gitignore  LICENSE  README.md  muon.py  pyproject.toml  rotary.py
creator/: __init__.py  __main__.py  app.py  config.py  generator.py  presets.py  theme.py
creator/screens/: __init__.py  attributes.py  race_select.py  standing_stones.py  summary.py  title_screen.py
creator/widgets/: __init__.py  character_portrait.py  character_sheet.py  parchment.py  stat_slider.py
